* rBuilder can command an rMake server local to the web browser's machine.
* custom output filenames can now be specified for builds.
* Xen support has been added to the group builder "cook group" dialog.
* Fix for RBL-408: Opening two "create release" tabs at once gives "requested
  item not found"
* External password checking URLs can now be used.

--- affects job server on tip ---
* vmware images now default to bridged mode.

Changes in 1.6.3:
* Installation paths changed: /srv/mint is now /srv/rbuilder; configuration is
  now in /srv/rbuilder/rbuilder.conf.
* Projects created using rBA may use a custom domain name.
* rBA administrator interface now has a link to rAA for managing
  system updates, entitlements, etc.
* Projects and users are now administered via the project home page and
  user information page respectively, instead of the administrator page.
* Administrative interface now matches the site layout.
* The ability to browse and search for users has been exposed for
  administrators only.
* Project and user browse/search will include hidden projects and unconfirmed
  users if the client has administrative privileges.
* The ability to disable projects has been removed. The "disabled" column,
  however, still exists in the Projects table, but is ignored.
* A bug in raw2vmdk which caused occasional miscalculation of the disk
  metadata size has been fixed.
* The download landing page has been removed, and an alternate method for
  download tracking using Google Analytics has been implemented.
* The "show media check" option for installable ISOs now behaves correctly.
  The sense used to be backwards: selecting "show media check" would skip
  the media check, and vice-versa.
* Users with admin privileges on project repositories can now alter
  low-level Conary groups and permissions.
* Swap file size on bootable images is now configurable.
* A kernel is not required when building a bootable image. This can be
  for certain image types and applications.