@@ -13,6 +13,8 @@ Changes in tip:
 * Fix for RBL-408: Opening two "create release" tabs at once gives "requested
   item not found"
 * External password checking URLs can now be used.
+* The tar archive from mirror priming is now deleted after a successful
+  extraction. (RBL-830)
 
 --- affects job server on tip ---
 * vmware images now default to bridged mode.
